--- a/app/templates/detect.html
+++ b/app/templates/detect.html
@@ -4,13 +4,29 @@
 {% block app_content %}
 <table class="table table-hover">
     <tr>
-        <td>
+        <td style="text-align:center">
             <h1>{{ landmark }}</h1>
         </td>
     </tr>
     <tr>
-        <td><img src="{{url_for('static', filename=image_path)}}" alt="Uploaded landmark image" style="width:500px;">
+        <td style="text-align:center">
+            <img src="{{url_for('img_show', filename=image_path)}}" alt="Uploaded landmark image" style="width:500px;">
         </td>
     </tr>
+    <tr>
+        <td style="text-align:justify">
+            {{ info_text }}
+        </td>
+    </tr>
+    {% if speech %}
+    <tr>
+        <td style="text-align:center">
+            <audio controls src="{{url_for('audio_show', filename=speech)}}">
+                Your browser does not support the
+                <code>audio</code> element.
+            </audio>
+        </td>
+    </tr>
+    {% endif %}
 </table>
 {% endblock %}
