--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Hi!</h1>
+    <h1>Welcome to Turisteo</h1>
     {% if form %}
     {{ wtf.quick_form(form) }}
     <br>
