--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -2,10 +2,8 @@
     margin-top: 40px;
     text-align: center;
 }
-.text_lan{
-    margin-top: 10px;
-    text-align: right;
-    font-size: 20px;
+.lang{
+    width:180px;
 }
 .myrow{
     text-align: center;
