Added more languages and sidabled the submit button if the image is not loading

--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -13,8 +13,11 @@
     margin-left: 10px;
 }
 .scroll_text{
-    height: 900px;
+    height: 700px;
     overflow-y: scroll;
     margin-bottom: 30px;
+}
+.image{
+    margin-bottom: 20px;
 }
 
