--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -20,7 +20,18 @@
 .image{
     margin-bottom: 20px;
 }
+.image_logo{
+    position: relative;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
 .places{
     margin-left: 20px;
 }
+.img_logo{
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
+
 
