--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -10,7 +10,7 @@
 }
 .audio{
     margin-top: 8px;
-    margin-left: 10px;
+
 }
 .scroll_text{
     height: 500px;
@@ -37,5 +37,35 @@
     margin-top: 150px;
     margin-bottom: 10px;
 }
+.side_col_l{
+    background-color: rgb(0, 162, 255);
+    background-image: url(images/col_l.png);
+}
+.side_col_r{
+    background-color: rgb(0, 162, 255);
+    background-image: url(images/col_r.png);
+}
+.row_language{
+    margin-left: 100px;
+}
+@font-face {
+    font-family: myFirstFont;
+    src: url(fonts/LifestyleRegular-gxEPp.ttf);
+  }
+
+h1 {
+    font-family: myFirstFont;
+}
+h4{
+    font-family: myFirstFont;
+}
+.introduction_text{
+    font-family: introduction_font;
+}
+
+@font-face {
+    font-family: introduction_font;
+    src: url(fonts/CaviarDreams.ttf);
+  }
 
 
